--- a/index.html
+++ b/index.html
@@ -1,66 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>India Independence Day Celebration</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 2rem;
-            background: #fff;
-            color: #333;
-        }
-        header {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-        h1 {
-            color: #ff5722;
-        }
-        section {
-            max-width: 800px;
-            margin: auto;
-            line-height: 1.6;
-        }
-        footer {
-            text-align: center;
-            margin-top: 3rem;
-            font-size: 0.9rem;
-            color: #777;
-        }
-    </style>
+  <title>69th Independence Day of India - 2015</title>
+  <style>
+    body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; }
+    h1 { color: #004d00; }
+    img { max-width: 100%; height: auto; }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>India's Independence Day</h1>
-        <p><strong>Date:</strong> August 15 (Annual Celebration)</p>
-    </header>
-
-    <section>
-        <h2>About Independence Day</h2>
-        <p>
-            Independence Day of India is celebrated every year on <strong>15th August</strong> to mark the nation's freedom from British rule in 1947. On this day, the Indian Independence Act 1947 came into effect, transferring legislative sovereignty from the United Kingdom to the Indian Constituent Assembly.
-        </p>
-        
-        <h3>Historical Significance</h3>
-        <p>
-            India attained independence after a sustained nonviolent resistance movement led chiefly by Mahatma Gandhi and the Indian National Congress. The partition of British India into India and Pakistan also coincided with independence, accompanied by significant challenges and upheaval. The first Independence Day flag hoisting was done by Jawaharlal Nehru at the Red Fort in Delhi on August 15, 1947.
-        </p>
-        
-        <h3>Celebrations</h3>
-        <p>
-            Independence Day is a national holiday celebrated throughout India with flag hoisting ceremonies, parades, cultural events, and patriotic programs. The Prime Minister hoists the national flag at the Red Fort in Delhi and delivers a nationally televised speech. Other states observe their own celebrations with local governors or chief ministers raising the flag. Traditional activities include singing the national anthem and kite flying.
-        </p>
-
-        <h3>2025 Celebration</h3>
-        <p>
-            In 2025, India will observe its <strong>79th Independence Day</strong>, continuing the legacy of patriotism and unity among its citizens. The President of India addresses the nation on the eve of August 15, followed by nationwide festivities.
-        </p>
-    </section>
-
-    <footer>
-        &copy; 2025 Celebrating India’s Freedom
-    </footer>
+  <h1>69th Independence Day of India - 2015</h1>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Indian_flag_2015.jpg" alt="Indian National Flag">
+  <p>India celebrated its 69th Independence Day on 15 August 2015 with flag hoisting, patriotic speeches, and cultural programs across the country.</p>
+  <p>President Pranab Mukherjee addressed the nation, and the Prime Minister hoisted the flag at the Red Fort in New Delhi.</p>
+  <p>Events included parades, tributes to freedom fighters, and a colorful display of patriotism.</p>
 </body>
 </html>
