--- a/index.html
+++ b/index.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>69th Independence Day of India - 2015</title>
-  <style>
-    body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; }
-    h1 { color: #004d00; }
-    img { max-width: 100%; height: auto; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #d4fc79, #96e6a1);
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 50px;
+            text-align: center;
+        }
+        h1 {
+            color: #2c3e50;
+        }
+        p {
+            font-size: 1.2em;
+            line-height: 1.8;
+            color: #444;
+        }
+        .message-box {
+            background: #fff;
+            padding: 25px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-  <h1>69th Independence Day of India - 2015</h1>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Indian_flag_2015.jpg" alt="Indian National Flag">
-  <p>India celebrated its 69th Independence Day on 15 August 2015 with flag hoisting, patriotic speeches, and cultural programs across the country.</p>
-  <p>President Pranab Mukherjee addressed the nation, and the Prime Minister hoisted the flag at the Red Fort in New Delhi.</p>
-  <p>Events included parades, tributes to freedom fighters, and a colorful display of patriotism.</p>
+    <div class="container">
+        <h1>Welcome to Your Day!</h1>
+        <div class="message-box">
+            <p><strong>🌟 A Good Message:</strong> Every new day is a gift, full of opportunities waiting for you to shine. 
+               Embrace it with positivity, and you’ll find joy even in the smallest moments.</p>
+        </div>
+        <div class="message-box">
+            <p><strong>📖 A Short Passage:</strong> Life is like a beautiful book, and each day adds a fresh page to the story. 
+               Some pages are full of laughter, some with challenges—but together, they create a unique and meaningful journey. 
+               Be kind, stay hopeful, and write today’s page with courage and love.</p>
+        </div>
+    </div>
 </body>
 </html>
